[BE] Fix 필터예외 처리 수정