@@ -6,16 +6,9 @@ import springfox.documentation.builders.ApiInfoBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
-import springfox.documentation.service.ApiKey;
-import springfox.documentation.service.AuthorizationScope;
-import springfox.documentation.service.SecurityReference;
 import springfox.documentation.spi.DocumentationType;
-import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
-
-import java.util.Collections;
-import java.util.List;
 
 @Configuration
 @EnableSwagger2
@@ -24,10 +17,10 @@ public class SwaggerConfig {
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
-                //인증 방식
-                .securityContexts(Collections.singletonList(securityContext()))
-                //Swagger 내에서 인증하는 방식
-                .securitySchemes(List.of(apiKey()))
+//                //인증 방식
+//                .securityContexts(Collections.singletonList(securityContext()))
+//                //Swagger 내에서 인증하는 방식
+//                .securitySchemes(List.of(apiKey()))
                 .select()
                 .apis(RequestHandlerSelectors.basePackage("com.a603.tonemate.api.controller"))
                 .paths(PathSelectors.any())
@@ -35,24 +28,24 @@ public class SwaggerConfig {
                 .apiInfo(apiInfo());
     }
 
-    // 인증 방식 설정
-    private SecurityContext securityContext() {
-        return SecurityContext.builder()
-                .securityReferences(defaultAuth())
-                .build();
-    }
-
-    private List<SecurityReference> defaultAuth() {
-        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
-        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
-        authorizationScopes[0] = authorizationScope;
-        return List.of(new SecurityReference("Authorization", authorizationScopes));
-    }
-
-    // 버튼 클릭 시 입력 값 설정
-    private ApiKey apiKey() {
-        return new ApiKey("Authorization", "Authorization", "header");
-    }
+//    // 인증 방식 설정
+//    private SecurityContext securityContext() {
+//        return SecurityContext.builder()
+//                .securityReferences(defaultAuth())
+//                .build();
+//    }
+//
+//    private List<SecurityReference> defaultAuth() {
+//        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
+//        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
+//        authorizationScopes[0] = authorizationScope;
+//        return List.of(new SecurityReference("Authorization", authorizationScopes));
+//    }
+//
+//    // 버튼 클릭 시 입력 값 설정
+//    private ApiKey apiKey() {
+//        return new ApiKey("Authorization", "Authorization", "header");
+//    }
 
     private ApiInfo apiInfo() {
         return new ApiInfoBuilder()
